# q_chat

./: README.md  chat.db  Пояснения для проверяющего.docx
chat_server/: CMakeLists.txt
chat_server/sources/: Database.cpp  Test.cpp  User.cpp  User.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  messwindow.cpp  messwindow.h  messwindow.ui
chat_user/: CMakeLists.txt
chat_user/sources/: Database.cpp  Database.h  loginform.cpp  mainwindow.cpp
chat_user/translations/: my_ru.ts
